	* Add feature #35878: Issue error message if FE login security level is not set to "normal" or to "rsa"
	* Add feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
	* Fix bug #35882: Corrections to template subpart for "terms acknowledged"
	* Follow-up to feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)

2012-04-10 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 1 to feature #35805: Require system extension adodb
	* Follow-up 9 to feature #34447: Do not show tx_srfeuserregister_password in HTML source
	* Follow-up to #15174 (old bug tracker): Incorrect test of absence of required value
	* Fix bug #35833: Password update on accepting invitation may not work
	* Follow-up 2 to feature #35805: Write error to syslog if required extension is not loaded
	* Follow-up 3 to feature #35805: Always use adodb Date library for timestamp conversion
	
2012-04-09 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #15174 (old bug tracker): Doesn't allow update of user group
	* Fix bug #10435 (old bug tracker): Error messages when country is changed while no user group is selected in frontend
	* Cleanup line breaks in rsaauth.js
	* Fix bug #14020 (old bug tracker): user groups from userGroupAfterConfirmation are visible in the invitation form
	* Fix bug #13913 (old bug tracker): Login through email-link overwrites usergroup settings
	* Cleanup: Add tx_srfeuserregister_pi1_adodb_time to ext_autoload
	* Add feature #35805: Use ADOdb Date Library from system extension adodb

2012-04-08 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #28370: replyTo feature for mails sent to user
	* Add feature #6168 (old bug tracker): Support itemsProcFunc property of TCA select and radio fields (Thanks to Jeff Segars)
	* Fix bug #12795 (old bug tracker): Default setup damages valid e-mail adresses
	* Fix bug #13765 (old bug tracker): Attachment file is attached to the administrative review email