@@ -4,6 +4,7 @@
 	* Add feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
 	* Fix bug #35882: Corrections to template subpart for "terms acknowledged"
 	* Follow-up to feature #35881: Add a status report about the installation of the extension (TYPO3 4.6+ only)
+	* Follow-up 5 to feature #35805: Drop requirement for ADOdb Date Library
 
 2012-04-10 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 1 to feature #35805: Require system extension adodb
